feature #10: added CLI unit tests
- added valid CLI parameters cases
- added invalid CLI parameters cases

closes #10

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,15 @@
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
+    "overrides": [
+        {
+            "files": ["test/**/*"],
+            "env": {
+                "jest": true,
+                "node": true
+            }
+        }
+    ],
     "rules": {
         "indent": [
             "error",
